--- a/NaucnaCentrala/pom.xml
+++ b/NaucnaCentrala/pom.xml
@@ -3,12 +3,12 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>root</groupId>
-	<artifactId>demo</artifactId>
+	<groupId>naucnaCentrala</groupId>
+	<artifactId>NaucnaCentrala</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>demo</name>
+	<name>NaucnaCentrala</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
