--- a/NaucnaCentrala/src/main/resources/application.properties
+++ b/NaucnaCentrala/src/main/resources/application.properties
@@ -3,3 +3,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/db_camunda
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=facebook.my.secured@gmail.com
+spring.mail.password=fbsec12345
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
