--- a/NaucnaCentrala/src/main/resources/application.properties
+++ b/NaucnaCentrala/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/db_camunda
 spring.datasource.username=root
 spring.datasource.password=root
@@ -10,3 +10,5 @@ spring.mail.username=facebook.my.secured@gmail.com
 spring.mail.password=fbsec12345
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+client.url=http://localhost:4200/
